BIG UPDATE: better check for register, now you can see the image that you are uploading, min length for username and password, passwords are now hashed, fixed a bug w messagebox, request accepts/declines bug fixed, session bug fixed, image too big bug fixed login bug fixed, now you can register only with unique name

--- a/WebServer/views/css/StyleUser.css
+++ b/WebServer/views/css/StyleUser.css
@@ -71,6 +71,7 @@ body
 
 #mesaje{
   height: 500px;
+
 }
 #prieteni{
   overflow-y: scroll;
@@ -97,10 +98,13 @@ body
 
 .msgr{
   float:right;
+width: 50x;
+word-break: break-all;
 }
 
 .msg{
   width: 50%;
+word-break: break-all;
 
 }
 
